refactor: rename model providers to providers
